--- a/search box/index.html
+++ b/search box/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="search-box">
-<input class="search-txt" type="text" name="" placeholder="نرم افزاری آینده سازان هنر نرم">	
+<input class="search-txt" type="text" name="" placeholder="Search">	
 	<a class="search-btn" href="#">
 	<i class="fas fa-search"></i>	
 	</a>
