update cv online2

--- a/CV ONline 2/index.html
+++ b/CV ONline 2/index.html
@@ -7,10 +7,10 @@
 
     <!-- template css files-->
     <link rel="stylesheet" href="css/style.css" type="text/css" >
-    <link rel="stylesheet" href="css/colors/pink.css" type="text/css" disabled >
+    <link rel="stylesheet" href="css/colors/pink.css" type="text/css" >
 
      <!-- live style switchers -->
-     <link rel="stylesheet" class="alternate-style" href="css/colors/pink.css" title="pink" type="text/css" >
+     <link rel="stylesheet" class="alternate-style" href="css/colors/pink.css" title="pink" type="text/css" disabled>
      <link rel="stylesheet" class="alternate-style" href="css/colors/blue.css" title="blue" type="text/css" disabled>
      <link rel="stylesheet" class="alternate-style" href="css/colors/green.css" title="green" type="text/css" disabled >
      <link rel="stylesheet" class="alternate-style" href="css/colors/orange.css" title="orange" type="text/css" disabled>
@@ -87,13 +87,12 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3>Je suis concepteuse d'application web.</h3>
+                    <h3>Je suis concepteur développeuse d'applications.</h3>
                     <p>
                       Je suis actuellment étudiant en formation professionnelle
-                      métiers de l'informatique: Concepteur d'application web à
+                      métiers de l'informatique: Concepteur développeur d'applications à l'Afpa à
                       Amiens . Je suis à la recherche d'un stage(non rémunéré)
-                      pour une durée de 3 mois à compter du 6 septembre 2021
-                      dans le domaine du développement web & mobile.
+                      pour une durée de 3 mois à compter du 6 septembre 2021.
                     </p>
                   </div>
                 </div>
@@ -121,7 +120,7 @@
                   <div class="skills padd-15">
                     <div class="row">
                       <div class="skill-item">
-                        <h4>Html 5 /CSS</h4>
+                        <h4>Html5 /CSS3</h4>
                       </div>
                       <div class="skill-item">
                         <h4>JAVASCRIPT</h4>
@@ -131,6 +130,12 @@
                       </div>
                       <div class="skill-item">
                         <h4>SQL</h4>
+                      </div>
+                      <div class="skill-item">
+                        <h4>JAVA</h4>
+                      </div>
+                      <div class="skill-item">
+                        <h4>Vue.js</h4>
                       </div>
                       <div class="skill-item">
                         <h4>BOOTSTRAP</h4>
@@ -148,7 +153,10 @@
                         <h4>JQUERY</h4>
                       </div>
                       <div class="skill-item">
-                        <h4>PHOTOSHOP</h4>
+                        <h4>Symfony</h4>
+                      </div>
+                      <div class="skill-item">
+                        <h4>Responsive design</h4>
                       </div>
                     </div>
                   </div>
@@ -332,16 +340,17 @@
 
         <h5>body skin</h5>
         <label>
-          <input type="radio" class="body-skin" name="body-style" value="light" checked="true">
-          Light
+          <input type="radio" class="body-skin" name="body-style" value="Light" checked="true">
+          Lumière
         </label>
 
         <label>
           <input type="radio" class="body-skin" name="body-style"  value="dark">
-          Dark
+          Foncé
         </label>
     </div>
     <!-- live style switcher end -->
+  
 
 
 
