--- a/Wordpress/index.html
+++ b/Wordpress/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/metro.css">
+
+    <script src="js/jquery-1.8.2.min.js"></script>
+    <script src="js/scrollbar.js"></script>
+
+    <script type="text/javascript">
+        jQuery(document).ready(function($) {
+            $("#metro-box").mCustomScrollbar({
+                horizontalScroll:true,
+            });
+        });
+    </script>
+
     <!--FONTAWESOME CSS-->
     <link
       rel="stylesheet"
@@ -69,9 +81,7 @@
                         </div>
                     </div>
                 </div>
-
-                
-
+  
                 <div class="metro-item ">
                     <div class="box-img">
                         <a href=""><img src="images/4.jpg" alt="image" title="image1"></a>
@@ -85,11 +95,42 @@
                         </div>
                     </div>
                 </div>
-
+                
                 <div class="metro-item">
+                    <div class="box-img">
+                        <a href=""><img src="images/3.jpg" alt="image" title="image1"></a>
+                        <div class="metro-content color_3">
+                            <h3>Line: Free calls & Message v5.1.0</h3>
+                            <div class="description">
+                                <p>
+                                    LINE is one of the best and most popular messages supplied to Android, which will give you a completely free voice call with your friends or send SMS for free and unlimited every hour.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="metro-item big">
                     <div class="box-img">
                         <a href=""><img src="images/2.jpg" alt="image" title="image1"></a>
                         <div class="metro-content color_2">
+                            <h3>Line: Free calls & Message v5.1.0</h3>
+                            <div class="description">
+                                <p>
+                                    LINE is one of the best and most popular messages supplied to Android, which will give you a completely free voice call with your friends or send SMS for free and unlimited every hour.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="metro-item">
+                    <div class="box-img">
+                        <a href=""><img src="images/5.jpg" alt="image" title="image1"></a>
+                        <div class="metro-content color_4">
                             <h3>Line: Free calls & Message v5.1.0</h3>
                             <div class="description">
                                 <p>
@@ -113,10 +154,23 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </section>
+
+        <div class="welearn-container">
+            <div class="welearn-post">
+                <div class="ourpost">
+                    <h3>Suggested content</h3>
+                    <div class=""></div>
+                    <ul>
+                        <li><img src="images/2.jpg" alt="" title=""><a href="#">Line: Free calls & Message v5.1.0<span> Visit : 404</span></a></li>
+                        <li><img src="images/2.jpg" alt="" title=""><a href="#">Line: Free calls & Message v5.1.0<span> Visit : 404</span></a></li>
+                        <li><img src="images/2.jpg" alt="" title=""><a href="#">Line: Free calls & Message v5.1.0<span> Visit : 404</span></a></li>
+                        <li><img src="images/2.jpg" alt="" title=""><a href="#">Line: Free calls & Message v5.1.0<span> Visit : 404</span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
      <!--fontawesome js-->
      <script src="all.min.js"></script>
