--- a/CV ONline 2/index.html
+++ b/CV ONline 2/index.html
@@ -39,7 +39,7 @@
           <span></span>
         </div>
         <!--navbar-->
-        <ul class="nav">
+        <ul class="nav navbar .navbar-toggler">
           <li>
             <a href="#" class="active"><i class="fa fa-home"></i> Accueil</a>
           </li>
@@ -55,9 +55,9 @@
       </div>
       <!--End Aside-->
       <!-- main content -->
-      <div class="main-content">
+      <div class="main-content col-sm-12 ">
         <!--home section-->
-        <section class="home section">
+        <section class="home section col-sm-12 col-xs-12">
           <div class="container">
             <div class="intro">
               <img
@@ -359,26 +359,26 @@
                   <div class="row">
                     <div class="form-item col-6 padd-15">
                       <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Nom*"> 
+                        <input type="text" class="form-control" placeholder="Nom"> 
                      </div>
                   </div>
                   <div class="form-item col-6 padd-15">
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="E-mail*"> 
+                      <input type="text" class="form-control" placeholder="E-mail" required> 
                    </div>
                 </div>
                   </div>
                   <div class="row"> 
                     <div class="form-item col-12 padd-15">
                       <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Sujet*"> 
+                        <input type="text" class="form-control" placeholder="Sujet"> 
                      </div>
                   </div>
                 </div>
                   <div class="row"> 
                     <div class="form-item col-12 padd-15">
                       <div class="form-group">
-                        <textarea class="form-control" placeholder="Votre Message"></textarea>
+                        <textarea class="form-control" placeholder="Votre Message" required></textarea>
                      </div>
                   </div>
                 </div>
